IPP/projects/IPP-test.php-master/int-only/vyzi_tests/should-fail/defvar2.src
<?xml version="1.0" encoding="UTF-8"?>
<program language="IPPcode19">
	<instruction order="1" opcode="DEFVAR">
		<arg1 type="int">22020</arg1>
	</instruction>
</program>
